[gd_scene load_steps=3 format=3 uid="uid://btc5e1qms3r4c"]

[ext_resource type="Script" path="res://character_selection_menu/player.gd" id="1_6smf8"]
[ext_resource type="Texture2D" uid="uid://c4seawfcmyewt" path="res://textures/elvis-joy.png" id="2_nabyi"]

[node name="Player" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2(100, 100)
script = ExtResource( "1_6smf8" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterTexture" type="TextureRect" parent="."]
offset_right = 1024.0
offset_bottom = 100.0
rect_min_size = Vector2(100, 100)
texture = ExtResource( "2_nabyi" )
ignore_texture_size = true
stretch_mode = 5

[node name="PlayerName" type="Label" parent="."]
offset_top = 104.0
offset_right = 1024.0
offset_bottom = 130.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IsReady" type="Label" parent="."]
offset_top = 134.0
offset_right = 1024.0
offset_bottom = 160.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Not ready"
__meta__ = {
"_edit_use_anchors_": false
}
